fix(slider-container): change css overflow to  overflow-x hidden

--- a/src/components/ewc-slides/ewc-slides.css
+++ b/src/components/ewc-slides/ewc-slides.css
@@ -18,7 +18,7 @@
 
 .slider-container {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .inner {
